--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
 
   <h1>Pomodoro Timer</h1>
-  <h2>Pomodoro</h2>
-  <div id="timer">00:05</div>
+  <h2 id="mode">pomodoro</h2>
+  countpomodoro:<div id="countpomodoro">4</div>
+  longbreakinterval:<div id="longbreakinterval">4</div>
+  autostart:<div id="autostart">true</div>
+  autobreak:<div id="autobreak">true</div>
+  <div id="timer">00:25</div>
 
   <button id="start">Start</button>
   <button id="stop">Stop</button>
