Fix count down effect of tomato circle.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 <body>
   <div class="header-part">
     <div id="fullProgress">
-      <div id="passedPomodoro"></div>
+      <div id="passed-pomodoro"></div>
     </div>
     <div class="count-pomodoros-panel">
-      <p id="countpomodoro">0</p> /
-      <p id="longbreakinterval">4</p>
+      <p id="count-pomodoro"></p> /
+      <p id="long-break-interval"></p>
     </div>
   </div>
 
   <div class="containter">
-    <div class="potato">
+    <div id="tomato">
       <div id="mode">Pomodoro</div>
-      <p id="timer">00:25</p>
-      <button id="start">Start</button>
-      <button id="stop">Stop</button>
-      <button id="reset">Reset</button>
+      <div id="timer">00:25</div>
     </div>
+    <!-- <button id="start">Start</button>
+    <button id="stop">Stop</button> -->
+    <button id="start-stop">Start</button>
+    <button id="reset">Reset</button>
   </div>
 
   <!-- <div class="footer-part">
