Clean code js functions.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <div class="containter">
     <div id="tomato">
-      <div id="mode">Pomodoro</div>
-      <div id="timer">00:25</div>
+      <div id="mode"></div>
+      <div id="timer"></div>
     </div>
     <!-- <button id="start">Start</button>
     <button id="stop">Stop</button> -->
