--- a/index.html
+++ b/index.html
@@ -3,52 +3,43 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Pomodoro Timer</title>
-        <link rel="stylesheet" href="css/mainWindow.css" />
+        <title>Pomodoro Timer UI</title>
+        <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/timer-ruler.css" />
     </head>
-
     <body>
-        <div class="header-part">
-            <button id="reset">Reset</button>
-            <div id="fullProgress">
-                <div id="passed-pomodoro"></div>
-            </div>
-            <div class="count-pomodoros-panel">
-                <p id="count-pomodoro"></p>
-                /
-                <p id="long-break-interval"></p>
-            </div>
-        </div>
-
-        <div class="containter">
-            <div id="tomato">
-                <div id="mode"></div>
-                <div id="timer"></div>
-            </div>
-        </div>
-
-        <div class="footer-part">
-            <button id="setting-button">⚙️ Setting</button>
-            <div id="setting-items-group">
-                <div class="setting-block">
-                    <label for="">Auto start pomodoro</label>
-                    <label class="switch">
-                        <input id="autostart" type="checkbox" />
-                        <span class="slider round"></span>
-                    </label>
+        <div class="timer-container">
+            <!-- Timer Display -->
+            <div class="timer-display">
+                <div class="top-half">
+                    <div class="timer-numbers">
+                        <div class="ruler-container">
+                            <div class="ruler"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="setting-block">
-                    <label for="">Auto start break</label>
-                    <label class="switch">
-                        <input id="autobreak" type="checkbox" />
-                        <span class="slider round"></span>
-                    </label>
+                <div class="bottom-half">
+                    <div class="timer-pointer"></div>
                 </div>
             </div>
+
+            <!-- Mode Buttons -->
+            <div class="mode-buttons">
+                <button>Short Break</button>
+                <button class="active">Pomodoro</button>
+                <button>Long Break</button>
+            </div>
+
+            <!-- Control Buttons -->
+            <div class="controls">
+                <button>&#9881;</button>
+                <!-- Settings Icon -->
+                <button id="start-pause">&#9658;</button>
+                <!-- Play Icon -->
+                <button>&#8635;</button>
+                <!-- Refresh Icon -->
+            </div>
         </div>
-
-        <audio id="notification-sound" src="sounds/ting.mp3"></audio>
-
-        <script src="./app.js"></script>
+        <script src="timer-ruler.js"></script>
     </body>
 </html>
