Add functions drag the ruler to change the countdown time.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 </div>
                 <div class="bottom-half">
                     <div class="timer-pointer"></div>
+                    <div class="digital-timer">
+                        <span id="timeDisplay">00:00</span>
+                    </div>
                 </div>
             </div>
 
