Fix the structure of the timer rule.r

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             <!-- Timer Display -->
             <div class="timer-display">
                 <div class="top-half">
-                    <div class="timer-numbers">
-                        <div class="ruler-container">
-                            <div class="ruler"></div>
+                    <div class="ruler-track">
+                        <div class="ruler-thumb">
+                            <!-- Absolute to the track -->
+                            <div class="ruler-divider-panel"></div>
+                            <!-- Fill the thumb -->
                         </div>
                     </div>
                 </div>
