Completed the timer ruler UI.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="bottom-half">
                     <div class="timer-pointer"></div>
                     <div class="digital-timer">
-                        <span id="timeDisplay">00:00</span>
+                        <span id="time-display">00:00</span>
                     </div>
                 </div>
             </div>
