Start stop function

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                 <!-- Refresh Icon -->
             </div>
         </div>
+        <audio
+            id="start-stop-sound"
+            preload="auto"
+            src="sounds/button.mp3"
+        ></audio>
+        <audio id="times-up-sound" src="sounds/ting.mp3"></audio>
         <script src="timer-ruler.js"></script>
+        <script src="timer-functions.js"></script>
     </body>
 </html>
